--- a/bartender-webapp/src/app/login/login.component.html
+++ b/bartender-webapp/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="flex min-h-screen flex-col justify-center px-6 lg:px-8">
+<div class="flex min-h-screen flex-col justify-start py-20 px-6 lg:px-8 ">
     <div class="sm:mx-auto sm:w-full sm:max-w-sm">
         <h2 class="text-center text-2xl font-bold leading-9 tracking-tight text-gray-900">
             Inloggen bij SmartBartender&trade;
@@ -11,7 +11,7 @@
                 <label for="email" class="block text-sm font-medium leading-6 text-gray-900">Email address</label>
                 <div class="mt-2">
                     <input formControlName="emailaddress" id="email" name="email" type="email" autocomplete="email"
-                        required
+                        required tabindex="1"
                         class="px-2 block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-primary sm:text-sm sm:leading-6">
                 </div>
             </div>
@@ -19,13 +19,10 @@
             <div>
                 <div class="flex items-center justify-between">
                     <label for="password" class="block text-sm font-medium leading-6 text-gray-900">Password</label>
-                    <div class="text-sm">
-                        <a href="#" class="font-semibold text-primary hover:text-primary">Forgot password?</a>
-                    </div>
                 </div>
                 <div class="mt-2">
                     <input formControlName="password" id="password" name="password" type="password"
-                        autocomplete="current-password" required
+                        autocomplete="current-password" required tabindex="2"
                         class="px-2 block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-primary sm:text-sm sm:leading-6">
                 </div>
             </div>
@@ -33,7 +30,7 @@
             <p class="form-label" style="color: red; font-size: medium;">{{this.errormessage}}</p>
 
             <div>
-                <button type="submit"
+                <button type="submit" tabindex="3"
                     class="flex w-full justify-center rounded-md bg-primary px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-primary focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary"
                     [disabled]="!loginForm.valid">Sign
                     in</button>
