--- a/bartender-webapp/src/app/home/home.component.html
+++ b/bartender-webapp/src/app/home/home.component.html
@@ -1,1 +1,19 @@
 <app-nav></app-nav>
+<div class="mobile-container block sm:hidden p-2">
+    <div class="grid grid-cols-2 gap-4">
+        <app-card></app-card>
+        <app-card></app-card>
+        <app-card></app-card>
+        <app-card></app-card>
+    </div>
+</div>
+<div class="desktop-container hidden sm:block ml-64 p-2">
+    <div class="grid md:grid-cols-3 lg:grid-cols-3 xl:grid-cols-4 2xl:grid-cols-5 gap-4">
+        <app-card></app-card>
+        <app-card></app-card>
+        <app-card></app-card>
+        <app-card></app-card>
+        <app-card></app-card>
+        <app-card></app-card>
+    </div>
+</div>
