--- a/bartender-webapp/src/app/nav/nav.component.html
+++ b/bartender-webapp/src/app/nav/nav.component.html
@@ -2,17 +2,13 @@
    <div class="col-span-1 flex items-center">
       <button id="toggleSidebar" data-drawer-target="logo-sidebar" data-drawer-toggle="logo-sidebar" aria-controls="logo-sidebar"
          type="button"
-         class="items-center p-2 mt-2 ms-3 text-sm text-gray-500 rounded-lg sm:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600">
+         class="items-center p-2 mt-2 ms-3 text-sm text-gray-900 rounded-lg sm:hidden">
          <span class="sr-only">Open sidebar</span>
          <svg class="w-6 h-6 text-gray-800" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
             fill="none" viewBox="0 0 24 24">
             <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M5 7h14M5 12h14M5 17h14" />
          </svg>
       </button>
-   </div>
-   <div class="col-span-4 flex items- justify-end">
-      <span id="content" class="self-center text-xl font-bold whitespace-nowrap text-gray-900 ml-3 mt-1 mr-5">SmartBartender&trade;
-      </span>
    </div>
 </div>
 
@@ -33,7 +29,7 @@
       <!-- Main navigation items -->
       <ul class="space-y-2 font-medium flex-grow">
          <li>
-            <a href="#"
+            <a href="home"
                class="flex items-center p-2 text-white-900 rounded-lg dark:text-white hover:bg-white hover:text-background dark:hover:bg-white group">
                <svg class="w-[26px] h-[26px]" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24"
                   height="24" fill="currentColor" viewBox="0 0 24 24">
@@ -46,7 +42,7 @@
             </a>
          </li>
          <li>
-            <a href="#"
+            <a href="drinks"
                class="flex items-center p-2 text-white-900 rounded-lg dark:text-white hover:bg-white hover:text-background dark:hover:bg-white group">
                <svg class="w-[26px] h-[26px] text-sm" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24"
                   height="24" fill="currentColor" viewBox="0 0 24 24">
@@ -59,7 +55,7 @@
             </a>
          </li>
          <li>
-            <a href="#"
+            <a href="mixer"
                class="flex items-center p-2 text-white rounded-lg hover:bg-white hover:text-background hover:bg-white">
                <svg class="w-[26px] h-[26px] " aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24"
                   height="24" fill="currentColor" viewBox="0 0 24 24">
@@ -71,7 +67,7 @@
             </a>
          </li>
          <li>
-            <a href="#"
+            <a href="settings"
                class="flex items-center p-2 text-white rounded-lg hover:bg-white hover:text-background hover:bg-white">
                <svg class="w-[26px] h-[26px]" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24"
                   height="24" fill="currentColor" viewBox="0 0 24 24">
