--- a/bartender-webapp/src/app/card/card.component.html
+++ b/bartender-webapp/src/app/card/card.component.html
@@ -5,10 +5,10 @@
     </a>
     <div class="p-5 bg-primary rounded-b-lg">
         <a href="#">
-            <h5 class="mb-2 text-2xl font-bold tracking-tight text-white">Drink</h5>
+            <h5 class="mb-2 text-2xl font-bold tracking-tight text-white"></h5>
         </a>
         <p class="leading-none mb-3 font-normal text-white">
-            Cola, water en nog veel meer
+            
         </p>
         <!-- <a href="#"
             class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
