--- a/bartender-webapp/src/app/drink-detail/drink-detail.component.html
+++ b/bartender-webapp/src/app/drink-detail/drink-detail.component.html
@@ -23,7 +23,7 @@
                     </ul>
                 </div>
                 <div class="col-span-1 mt-10">
-                    <a href="home"> <button
+                    <a href="drinks"> <button
                             class="inline-flex focus:border border-background items-center hover:text-background px-3 bg-background py-2 text-sm font-medium text-center text-white rounded-lg hover:bg-white   absolute bottom-4 left-4">
                             Back
                         </button></a>
@@ -58,7 +58,7 @@
                 </li>
             </ul>
             <div class="col-span-1 mt-60">
-                <a href="home"> <button
+                <a href="drinks"> <button
                         class="inline-flex items-center hover:border border-background hover:text-background mr-2 px-3 bg-background py-2 text-sm font-medium text-center text-white rounded-lg hover:bg-white  ">
                         Back
                     </button></a>
