--- a/bartender-webapp/src/app/drinks/drinks.component.html
+++ b/bartender-webapp/src/app/drinks/drinks.component.html
@@ -1,4 +1,9 @@
-<app-nav></app-nav>
+<div class="grid grid-cols-5">
+    <app-nav class="col-span-1"></app-nav>
+    <div class="col-span-4 flex items-stretch justify-end">
+        <h5 class="mb-2 text-2xl font-bold tracking-tight text-black self-end m-3 mr-4">Drinks</h5>
+    </div>
+</div>
 <div class="mobile-container block sm:hidden p-2">
     <div class="grid grid-cols-2 gap-4">
         <div *ngFor="let drink of drinks">
@@ -22,7 +27,7 @@
         </div>
     </div>
 </div>
-<div class="desktop-container hidden sm:block ml-64 p-2">
+<div class="desktop-container hidden sm:block ml-64 p-2 mt -2">
     <div class="grid md:grid-cols-3 lg:grid-cols-3 xl:grid-cols-4 2xl:grid-cols-5 gap-4">
         <div *ngFor="let drink of drinks">
 
@@ -43,5 +48,4 @@
             </div>
         </div>
     </div>
-
 </div>
