--- a/bartender-webapp/src/app/mixer/mixer.component.html
+++ b/bartender-webapp/src/app/mixer/mixer.component.html
@@ -4,3 +4,105 @@
         <h5 class="mb-2 text-2xl font-bold tracking-tight text-black self-end m-3 mr-4">Mixer</h5>
     </div>
 </div>
+<div class="mobile-container block sm:hidden p-2"><!-- Responsive form container -->
+    <div class="bg-white p-6 rounded-lg shadow-lg">
+        <!-- Form for managing the sliders -->
+        <form [formGroup]="mixerForm">
+            <!-- Name Input Field -->
+            <div class="mb-6">
+                <label for="name" class="block text-lg font-semibold text-gray-600">Your Name</label>
+                <input formControlName="name" type="text" id="name"
+                    class="mt-1 block w-full px-4 py-2 border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-primary focus:border-primary"
+                    placeholder="Enter your name">
+            </div>
+
+            <!-- Drink Selection with Sliders -->
+            <div class="space-y-6">
+                <div *ngFor="let drink of drinks; let i = index"
+                    class="flex flex-col lg:flex-row items-center justify-between space-y-4 lg:space-y-0">
+                    <div class="flex items-center w-full lg:w-1/4">
+                        <label class="block text-md font-semibold text-gray-600 w-full lg:w-auto">Drink {{ i + 1
+                            }}</label>
+                    </div>
+                    <div class="w-full lg:w-1/3">
+                        <select formControlName="drink{{i}}"
+                            class="block w-full px-4 py-2 border border-gray-300 bg-white rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-primary focus:border-primary">
+                            <option value="">Select a drink</option>
+                            <option *ngFor="let bottle of config_drinks" value="{{bottle.id}}">{{bottle.name}}</option>
+                        </select>
+                    </div>
+
+                    <!-- Slider Input -->
+                    <div class="w-full lg:w-1/3 flex items-center">
+                        <input type="range" min="0" max="100" [value]="drinkAmounts[i]"
+                            (input)="onSliderChange($event, i)"
+                            class="slider appearance-none w-full h-3 rounded-lg bg-gray-300" />
+
+                        <span class="ml-4 text-lg font-semibold text-gray-700">{{ drinkAmounts[i] * 2 }} mL</span>
+                        <!-- Show mL -->
+                    </div>
+                </div>
+            </div>
+
+            <!-- Save Button -->
+            <div class="mt-8">
+                <button (click)="saveMixer()" [disabled]="!isFormValid()"
+                [ngClass]="{'bg-primary focus:bg-white focus:border border-primary focus:text-primary text-white': isFormValid(), 'bg-gray-400 text-gray-700 cursor-not-allowed': !isFormValid()}"
+                class="w-full font-bold py-3 px-6 rounded-lg focus:outline-none transition">
+                Save
+                </button>
+            </div>
+        </form>
+    </div>
+</div>
+<div class="desktop-container hidden sm:block ml-64 p-2 mt -2"><!-- Responsive form container -->
+    <div class="bg-white p-6 rounded-lg shadow-lg">
+        <!-- Form for managing the sliders -->
+        <form [formGroup]="mixerForm">
+            <!-- Name Input Field -->
+            <div class="mb-6">
+                <label for="name" class="block text-lg font-semibold text-gray-600">Name of the drink</label>
+                <input formControlName="name" type="text" id="name"
+                    class="mt-1 block w-full px-4 py-2 border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-primary focus:border-primary"
+                    placeholder="Enter the drink name">
+            </div>
+
+            <!-- Drink Selection with Sliders -->
+            <div class="space-y-6">
+                <div *ngFor="let drink of drinks; let i = index"
+                    class="flex flex-col lg:flex-row items-center justify-between space-y-4 lg:space-y-0">
+                    <div class="flex items-center w-full lg:w-1/4">
+                        <label class="block text-md font-semibold text-gray-600 w-full lg:w-auto">Drink {{ i + 1
+                            }}</label>
+                    </div>
+                    <div class="w-full lg:w-1/3">
+                        <select formControlName="drink{{i}}"
+                            class="block w-full px-4 py-2 border border-gray-300 bg-white rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-primary focus:border-primary">
+                            <option value="">Select a drink</option>
+                            <option *ngFor="let bottle of config_drinks" value="{{bottle.id}}">{{bottle.name}}</option>
+                        </select>
+                    </div>
+
+                    <!-- Slider Input -->
+                    <div class="w-full lg:w-1/3 flex items-center">
+                        <input type="range" min="0" max="100" [value]="drinkAmounts[i]"
+                            (input)="onSliderChange($event, i)"
+                            class="slider appearance-none w-full h-3 rounded-lg bg-gray-300" />
+
+                        <span class="ml-4 text-lg font-semibold text-gray-700">{{ drinkAmounts[i] * 2 }} mL</span>
+                        <!-- Show mL -->
+                    </div>
+                </div>
+            </div>
+
+            <!-- Save Button -->
+            <div class="mt-8">
+                <button (click)="saveMixer()" [disabled]="!isFormValid()"
+                    [ngClass]="{'bg-primary hover:bg-white hover:border border-primary hover:text-primary text-white': isFormValid(), 'bg-gray-400 text-gray-700 cursor-not-allowed': !isFormValid()}"
+                    class="w-full font-bold py-3 px-6 rounded-lg focus:outline-none transition">
+                    Save
+                </button>
+            </div>
+        </form>
+    </div>
+</div>
