--- a/bartender-webapp/src/app/nav/nav.component.html
+++ b/bartender-webapp/src/app/nav/nav.component.html
@@ -30,7 +30,7 @@
       <ul class="space-y-2 font-medium flex-grow">
          <li>
             <a href="home"
-               class="flex items-center p-2 text-white-900 rounded-lg dark:text-white hover:bg-white hover:text-background dark:hover:bg-white group">
+               class="flex items-center text-white p-2 rounded-lg hover:bg-white hover:text-background group">
                <svg class="w-[26px] h-[26px]" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24"
                   height="24" fill="currentColor" viewBox="0 0 24 24">
                   <path
@@ -43,7 +43,7 @@
          </li>
          <li>
             <a href="drinks"
-               class="flex items-center p-2 text-white-900 rounded-lg dark:text-white hover:bg-white hover:text-background dark:hover:bg-white group">
+               class="flex items-center p-2 text-white rounded-lg hover:bg-white hover:text-background  group">
                <svg class="w-[26px] h-[26px] text-sm" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24"
                   height="24" fill="currentColor" viewBox="0 0 24 24">
                   <path fill-rule="evenodd"
