--- a/bartender-webapp/src/app/nav/nav.component.html
+++ b/bartender-webapp/src/app/nav/nav.component.html
@@ -1,7 +1,6 @@
 <div class="grid grid-cols-5 sm:hidden">
    <div class="col-span-1 flex items-center">
-      <button id="toggleSidebar" data-drawer-target="logo-sidebar" data-drawer-toggle="logo-sidebar" aria-controls="logo-sidebar"
-         type="button"
+      <button id="toggleSidebar" (click)="toggleSidebar($event)" type="button"
          class="items-center p-2 mt-2 ms-3 text-sm text-gray-900 rounded-lg sm:hidden">
          <span class="sr-only">Open sidebar</span>
          <svg class="w-6 h-6 text-gray-800" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
@@ -12,9 +11,11 @@
    </div>
 </div>
 
-<aside id="logo-sidebar" 
-   class="fixed top-0 left-0 z-40 w-64 h-screen transition-transform -translate-x-full sm:translate-x-0"
-   aria-label="Sidebar">
+<aside id="logo-sidebar"
+   class="fixed top-0 left-0 z-40 w-64 h-screen transition-transform"
+   [class.-translate-x-full]="!sidebarOpen"
+   aria-label="Sidebar"
+   (click)="$event.stopPropagation()">
    <div class="h-full flex flex-col px-2 py-4 overflow-y-auto bg-background">
       <a href="#" class="flex items-center ps-2.5 mb-5" data-drawer-target="logo-sidebar"
          data-drawer-toggle="logo-sidebar" aria-controls="logo-sidebar" type="button">
