--- a/bartender-webapp/src/app/mixer/mixer.component.html
+++ b/bartender-webapp/src/app/mixer/mixer.component.html
@@ -1,4 +1,4 @@
-<div class="grid grid-cols-5">
+<div class="fixed top-0 grid grid-cols-5 bg-white pb-2">
     <app-nav class="col-span-1"></app-nav>
     <div class="col-span-4 flex items-stretch justify-end">
         <h5 class="mb-2 text-2xl font-bold tracking-tight text-black self-end m-3 mr-4">Mixer</h5>
