--- a/bartender-webapp/src/app/settings/settings.component.html
+++ b/bartender-webapp/src/app/settings/settings.component.html
@@ -1,119 +1,161 @@
-<div class="grid grid-cols-5">
+<div class="fixed top-0 grid grid-cols-5 bg-white pb-2">
     <app-nav class="col-span-1"></app-nav>
     <div class="col-span-4 flex items-stretch justify-end">
-        <h5 class="mb-2 text-2xl font-bold tracking-tight text-black self-end m-3 mr-4">Settings</h5>
+        <h5 class="mb-2 text-2xl font-bold tracking-tight text-black self-end m-3 mr-4">Dashboard</h5>
     </div>
 </div>
-
 <div class="mobile-container block sm:hidden p-2">
-    <!-- Responsive form container for mobile -->
-    <div class="bg-white p-6 rounded-lg shadow-lg">
-        <!-- Button to set all bottles to 1500mL -->
-        <div class="mb-6">
-            <button (click)="setAllBottlesToFull()"
-                class="w-full bg-primary hover:bg-white hover:text-primary hover:border border-primary text-white font-bold py-2 px-4 rounded focus:outline-none focus:ring-2 focus:ring-primary focus:ring-opacity-50">
-                Set All Bottles to Full (1500mL)
-            </button>
-        </div>
-
-        <!-- Form for selecting a drink and setting its volume for each bottle -->
+    <div class="settings-container p-4">
         <form [formGroup]="settingsForm">
-            <div *ngFor="let bottleControl of bottlesArray.controls; let i = index" [formGroupName]="i">
-                <!-- Drink Selection -->
-                <div class="mb-6">
-                    <label for="drink" class="block text-lg font-semibold text-gray-600">Bottle {{ i + 1 }}: {{ bottleControl.get('name')?.value }}</label>
-                    <select formControlName="id"
-                        class="block w-full px-4 py-2 border border-gray-300 bg-white rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-primary focus:border-primary">
-                        <option value="">Select a drink</option>
-                        <option *ngFor="let bottle of config_drinks" [value]="bottle.id">{{ bottle.name }}</option>
-                    </select>
-                </div>
+            <!-- Bottle 1 -->
+            <div class="bg-white p-4 rounded-lg shadow-lg mb-4">
+                <h5 class="text-xl font-bold mb-4">Bottle 1</h5>
+                <label for="drinkSelect1" class="block text-md font-semibold text-gray-600 mb-2">Select Drink</label>
+                <select formControlName="bottle1Id" id="drinkSelect1"
+                    class="block w-full px-4 py-2 border border-gray-300 bg-white rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-primary focus:border-primary mb-4">
+                    <option value="" disabled>Select a drink</option>
+                    <option *ngFor="let drink of config_drinks" [value]="drink.id">{{ drink.name }}</option>
+                </select>
+            </div>
 
-                <!-- Volume Selection -->
-                <div class="mb-6">
-                    <label class="block text-lg font-semibold text-gray-600">Set Bottle Volume</label>
-                    <div class="flex space-x-4">
-                        <label class="flex items-center">
-                            <input type="radio" formControlName="volume" value="1000"
-                                class="form-radio text-primary focus:ring-primary">
-                            <span class="ml-2">1000 mL</span>
-                        </label>
-                        <label class="flex items-center">
-                            <input type="radio" formControlName="volume" value="1500"
-                                class="form-radio text-primary focus:ring-primary" checked>
-                            <span class="ml-2">1500 mL</span>
-                        </label>
-                        <label class="flex items-center">
-                            <input type="radio" formControlName="volume" value="2000"
-                                class="form-radio text-primary focus:ring-primary">
-                            <span class="ml-2">2000 mL</span>
-                        </label>
-                    </div>
-                </div>
+            <!-- Bottle 2 -->
+            <div class="bg-white p-4 rounded-lg shadow-lg mb-4">
+                <h5 class="text-xl font-bold mb-4">Bottle 2</h5>
+                <label for="drinkSelect2" class="block text-md font-semibold text-gray-600 mb-2">Select Drink</label>
+                <select formControlName="bottle2Id" id="drinkSelect2"
+                    class="block w-full px-4 py-2 border border-gray-300 bg-white rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-primary focus:border-primary mb-4">
+                    <option value="" disabled>Select a drink</option>
+                    <option *ngFor="let drink of config_drinks" [value]="drink.id">{{ drink.name }}</option>
+                </select>
+            </div>
+
+            <!-- Bottle 3 -->
+            <div class="bg-white p-4 rounded-lg shadow-lg mb-4">
+                <h5 class="text-xl font-bold mb-4">Bottle 3</h5>
+                <label for="drinkSelect3" class="block text-md font-semibold text-gray-600 mb-2">Select Drink</label>
+                <select formControlName="bottle3Id" id="drinkSelect3"
+                    class="block w-full px-4 py-2 border border-gray-300 bg-white rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-primary focus:border-primary mb-4">
+                    <option value="" disabled>Select a drink</option>
+                    <option *ngFor="let drink of config_drinks" [value]="drink.id">{{ drink.name }}</option>
+                </select>
+            </div>
+
+            <!-- Bottle 4 -->
+            <div class="bg-white p-4 rounded-lg shadow-lg mb-4">
+                <h5 class="text-xl font-bold mb-4">Bottle 4</h5>
+                <label for="drinkSelect4" class="block text-md font-semibold text-gray-600 mb-2">Select Drink</label>
+                <select formControlName="bottle4Id" id="drinkSelect4"
+                    class="block w-full px-4 py-2 border border-gray-300 bg-white rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-primary focus:border-primary mb-4">
+                    <option value="" disabled>Select a drink</option>
+                    <option *ngFor="let drink of config_drinks" [value]="drink.id">{{ drink.name }}</option>
+                </select>
+            </div>
+
+            <!-- Bottle 5 -->
+            <div class="bg-white p-4 rounded-lg shadow-lg mb-4">
+                <h5 class="text-xl font-bold mb-4">Bottle 5</h5>
+                <label for="drinkSelect5" class="block text-md font-semibold text-gray-600 mb-2">Select Drink</label>
+                <select formControlName="bottle5Id" id="drinkSelect5"
+                    class="block w-full px-4 py-2 border border-gray-300 bg-white rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-primary focus:border-primary mb-4">
+                    <option value="" disabled>Select a drink</option>
+                    <option *ngFor="let drink of config_drinks" [value]="drink.id">{{ drink.name }}</option>
+                </select>
+            </div>
+
+            <!-- Bottle 6 -->
+            <div class="bg-white p-4 rounded-lg shadow-lg mb-4">
+                <h5 class="text-xl font-bold mb-4">Bottle 6</h5>
+                <label for="drinkSelect6" class="block text-md font-semibold text-gray-600 mb-2">Select Drink</label>
+                <select formControlName="bottle6Id" id="drinkSelect6"
+                    class="block w-full px-4 py-2 border border-gray-300 bg-white rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-primary focus:border-primary mb-4">
+                    <option value="" disabled>Select a drink</option>
+                    <option *ngFor="let drink of config_drinks" [value]="drink.id">{{ drink.name }}</option>
+                </select>
             </div>
 
             <!-- Save Button -->
-            <div class="mt-6">
-                <button (click)="saveSettings()"
-                    class="w-full bg-primary hover:bg-white hover:text-primary hover:border border-primary text-white font-bold py-3 px-6 rounded-lg focus:outline-none focus:ring-2 focus:ring-primary transition">
+            <div class="fixed bottom-0 left-0 w-full p-4 shadow-lg flex justify-end">
+                <button type="button" (click)="saveSettings()"
+                    class="bg-primary text-white font-bold py-3 px-6 rounded-lg flex justify-end focus:outline-none transition">
                     Save Settings
                 </button>
             </div>
         </form>
     </div>
 </div>
+<div class="desktop-container hidden sm:block ml-64 p-2 mt -2">
+    <div class="settings-container p-4">
+        <form [formGroup]="settingsForm" class=" gap-4 grid md:grid-cols-1 lg:grid-cols-2 xl:grid-cols-3 2xl:grid-cols-3">
+            <!-- Bottle 1 -->
+            <div class="bg-white p-4 rounded-lg shadow-lg mb-4 col-span-1">
+                <h5 class="text-xl font-bold mb-4">Bottle 1</h5>
+                <label for="drinkSelect1" class="block text-md font-semibold text-gray-600 mb-2">Select Drink</label>
+                <select formControlName="bottle1Id" id="drinkSelect1"
+                    class="block w-full px-4 py-2 border border-gray-300 bg-white rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-primary focus:border-primary mb-4">
+                    <option value="" disabled>Select a drink</option>
+                    <option *ngFor="let drink of config_drinks" [value]="drink.id">{{ drink.name }}</option>
+                </select>
+            </div>
 
-<div class="desktop-container hidden sm:block ml-64 p-2 mt-2">
-    <!-- Responsive form container for desktop -->
-    <div class="bg-white p-6 rounded-lg shadow-lg">
-        <!-- Button to set all bottles to 1500mL -->
-        <div class="mb-6">
-            <button (click)="setAllBottlesToFull()"
-                class="w-full bg-primary hover:bg-white hover:text-primary hover:border border-primary text-white font-bold py-2 px-4 rounded focus:outline-none focus:ring-2 focus:ring-primary focus:ring-opacity-50">
-                Set All Bottles to Full (1500mL)
-            </button>
-        </div>
+            <!-- Bottle 2 -->
+            <div class="bg-white p-4 rounded-lg shadow-lg mb-4 col-span-1">
+                <h5 class="text-xl font-bold mb-4">Bottle 2</h5>
+                <label for="drinkSelect2" class="block text-md font-semibold text-gray-600 mb-2">Select Drink</label>
+                <select formControlName="bottle2Id" id="drinkSelect2"
+                    class="block w-full px-4 py-2 border border-gray-300 bg-white rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-primary focus:border-primary mb-4">
+                    <option value="" disabled>Select a drink</option>
+                    <option *ngFor="let drink of config_drinks" [value]="drink.id">{{ drink.name }}</option>
+                </select>
+            </div>
 
-        <!-- Form for selecting a drink and setting its volume for each bottle -->
-        <form [formGroup]="settingsForm">
-            <div *ngFor="let bottleControl of bottlesArray.controls; let i = index" [formGroupName]="i">
-                <!-- Drink Selection -->
-                <div class="mb-6">
-                    <label for="drink" class="block text-lg font-semibold text-gray-600">Bottle {{ i + 1 }}: {{ bottleControl.get('name')?.value }}</label>
-                    <select formControlName="id"
-                        class="block w-full px-4 py-2 border border-gray-300 bg-white rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-primary focus:border-primary">
-                        <option value="">Select a drink</option>
-                        <option *ngFor="let bottle of config_drinks" [value]="bottle.id">{{ bottle.name }}</option>
-                    </select>
-                </div>
+            <!-- Bottle 3 -->
+            <div class="bg-white p-4 rounded-lg shadow-lg mb-4 col-span-1">
+                <h5 class="text-xl font-bold mb-4">Bottle 3</h5>
+                <label for="drinkSelect3" class="block text-md font-semibold text-gray-600 mb-2">Select Drink</label>
+                <select formControlName="bottle3Id" id="drinkSelect3"
+                    class="block w-full px-4 py-2 border border-gray-300 bg-white rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-primary focus:border-primary mb-4">
+                    <option value="" disabled>Select a drink</option>
+                    <option *ngFor="let drink of config_drinks" [value]="drink.id">{{ drink.name }}</option>
+                </select>
+            </div>
 
-                <!-- Volume Selection -->
-                <div class="mb-6">
-                    <label class="block text-lg font-semibold text-gray-600">Set Bottle Volume</label>
-                    <div class="flex space-x-4">
-                        <label class="flex items-center">
-                            <input type="radio" formControlName="volume" value="1000"
-                                class="form-radio text-primary focus:ring-primary">
-                            <span class="ml-2">1000 mL</span>
-                        </label>
-                        <label class="flex items-center">
-                            <input type="radio" formControlName="volume" value="1500"
-                                class="form-radio text-primary focus:ring-primary" checked>
-                            <span class="ml-2">1500 mL</span>
-                        </label>
-                        <label class="flex items-center">
-                            <input type="radio" formControlName="volume" value="2000"
-                                class="form-radio text-primary focus:ring-primary">
-                            <span class="ml-2">2000 mL</span>
-                        </label>
-                    </div>
-                </div>
+            <!-- Bottle 4 -->
+            <div class="bg-white p-4 rounded-lg shadow-lg mb-4 col-span-1">
+                <h5 class="text-xl font-bold mb-4">Bottle 4</h5>
+                <label for="drinkSelect4" class="block text-md font-semibold text-gray-600 mb-2">Select Drink</label>
+                <select formControlName="bottle4Id" id="drinkSelect4"
+                    class="block w-full px-4 py-2 border border-gray-300 bg-white rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-primary focus:border-primary mb-4">
+                    <option value="" disabled>Select a drink</option>
+                    <option *ngFor="let drink of config_drinks" [value]="drink.id">{{ drink.name }}</option>
+                </select>
+            </div>
+
+            <!-- Bottle 5 -->
+            <div class="bg-white p-4 rounded-lg shadow-lg mb-4 col-span-1">
+                <h5 class="text-xl font-bold mb-4">Bottle 5</h5>
+                <label for="drinkSelect5" class="block text-md font-semibold text-gray-600 mb-2">Select Drink</label>
+                <select formControlName="bottle5Id" id="drinkSelect5"
+                    class="block w-full px-4 py-2 border border-gray-300 bg-white rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-primary focus:border-primary mb-4">
+                    <option value="" disabled>Select a drink</option>
+                    <option *ngFor="let drink of config_drinks" [value]="drink.id">{{ drink.name }}</option>
+                </select>
+            </div>
+
+            <!-- Bottle 6 -->
+            <div class="bg-white p-4 rounded-lg shadow-lg mb-4 col-span-1">
+                <h5 class="text-xl font-bold mb-4">Bottle 6</h5>
+                <label for="drinkSelect6" class="block text-md font-semibold text-gray-600 mb-2">Select Drink</label>
+                <select formControlName="bottle6Id" id="drinkSelect6"
+                    class="block w-full px-4 py-2 border border-gray-300 bg-white rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-primary focus:border-primary mb-4">
+                    <option value="" disabled>Select a drink</option>
+                    <option *ngFor="let drink of config_drinks" [value]="drink.id">{{ drink.name }}</option>
+                </select>
             </div>
 
             <!-- Save Button -->
-            <div class="mt-6">
-                <button (click)="saveSettings()"
-                    class="w-full bg-primary hover:bg-white hover:text-primary hover:border border-primary text-white font-bold py-3 px-6 rounded-lg focus:outline-none focus:ring-2 focus:ring-primary transition">
+            <div class="fixed bottom-0 left-0 w-full p-4 shadow-lg flex justify-end">
+                <button type="button" (click)="saveSettings()"
+                    class="bg-primary text-white font-bold py-3 px-6 rounded-lg flex justify-end focus:outline-none transition">
                     Save Settings
                 </button>
             </div>
