--- a/bartender-webapp/src/styles.css
+++ b/bartender-webapp/src/styles.css
@@ -2,3 +2,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.mobile-container {
+    margin-top: 40px;
+}
+
+.desktop-container {
+    margin-top: 40px;
+}
